update mmwy reference

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -769,3 +769,10 @@
   year   =  2021,
   doi    = "10.5281/zenodo.5812298"
 }
+
+@MISC{MMWRweek,
+  title = "MMWR week description and corresponding calendar dates (2006–2025)",
+  author = "Department of Health, NM-IBIS",
+  howpublished = "\url{https://ibis.health.state.nm.us/resource/MMWRWeekCalendar.html}",
+  note = "Accessed: 13 January 2021"
+}
