add final comments from @sbfnk and @seabbs

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -776,3 +776,19 @@
   howpublished = "\url{https://ibis.health.state.nm.us/resource/MMWRWeekCalendar.html}",
   note = "Accessed: 13 January 2021"
 }
+
+@MISC{AnalysisCode,
+  title  = "epiforecasts/simplified-forecaster-evaluation",
+  author = "Abbott, Sam and Bosse, Nikos",
+  month  =  oct,
+  year   =  2022,
+  doi    = "10.5281/zenodo.7189309"
+}
+
+@MISC{ModelCode,
+  title  = "seabbs/ecdc-weekly-growth-forecasts",
+  author = "Abbott, Sam and Sherratt, Kath",
+  month  =  oct,
+  year   =  2022,
+  doi    = "10.5281/zenodo.7189621"
+}
