--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -290,6 +290,7 @@ observations <- data.table(
     "Less reactive to apparent observed changes in trend",
     "Sharper forecasts",
     "A tendency towards underprediction"
+    "Modelling the reporting process appears to have little impact"
   )
 )
 
@@ -333,7 +334,7 @@ assumptions <- data.table(
     "The growth rate of infections can be represented as an auto-regressive process with an order of 1 week", # nolint
     "Unobserved interventions and more general changes in transmission towards a stable state can be represented \n using a multiplicative decay parameter" # nolint
   ),
-  Observation = c("1, and 2", "-", "3 and 4", "2, and 5")
+  Observation = c("1, and 2", "6", "3 and 4", "2, and 5")
 )
 
 assumptions |>
@@ -545,8 +546,8 @@ Anomalies were also not evenly distributed over time with a higher proportion oc
 
 ```{r vis-forecasts, fig.cap = "a.) Forecasts of notified test-positive cases (per 10,000 population) by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom, by forecast horizon (one and four weeks) for the surrogate model (orange) and forecast ensemble (green). 30\\%, 60\\%, and 90\\% prediction intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time. b.) A replicate of a.) but with incidence rates on the log scale. c.) Weighted interval scores at the one-week and four-week forecast horizon by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom on the log scale.", out.width = "98%", fig.height = 8, fig.width = 12}
 p <- (
-  plot_forecast_custom(forecasts, log = FALSE) |
-  plot_forecast_custom(forecasts, log = TRUE) +
+  plot_forecast_custom(forecasts, log = FALSE, ranges = ranges) |
+  plot_forecast_custom(forecasts, log = TRUE, ranges = ranges) +
   labs(y = "") |
   plot_wis(wis, locs)
 ) +
